--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="container">
       
-      <img src="images\image-qr-code.png">
+      <img src="image-qr-code.png">
       <h3>   Improve your front-end skills by building projects  </h3>
       <pre> Scan the QR code to visit Frontend 
  Mentor and take your coding skills to 
